; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_follow_and_lstat_link.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_follow_and_lstat_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.stat*)* @follow_and_lstat_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @follow_and_lstat_link(i32 %0, %struct.stat* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.stat*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.stat* %1, %struct.stat** %5, align 8
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @getfinalpath_w(i32 %7, i32 %8)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %16

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.stat*, %struct.stat** %5, align 8
  %15 = call i32 @lstat_w(i32 %13, %struct.stat* %14, i32 0)
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i64 @getfinalpath_w(i32, i32) #1

declare dso_local i32 @lstat_w(i32, %struct.stat*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
